Update prueba.bat